--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -47,7 +47,7 @@
     <meta name="google-site-verification" content="bxUuDPxfionVUv0dGgyArG2ji7sxPJBfRmzL99RwSyo" />
 
     <!--  CSS STYLESHEET   -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -59,7 +59,7 @@
 <!--   NAVBAR   -->
     <header>
 
-        <nav class="navbar fixed-top navbar-expand-lg navbar navbar-dark bg-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar navbar-dark bg-primary">
             <a class="navbar-brand" href="https://jeanforteroche.valentin-antoin.fr/index.php">Billet simple pour l'Alaska</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -109,7 +109,7 @@
                     <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=disconnect">Se déconnecter</a>
                     </li>
                 <li class="navbar-item">
-                    <a class="nav-link" href="#">Bonjour {{ session.pseudo }}</a>
+                    <a class="nav-link disabled" href="#">Bonjour {{ session.pseudo }}</a>
                 </li>
                 {% endif %}
                 </ul>
@@ -130,9 +130,9 @@
 <!--   FOOTER   -->
     <footer>
 
-        <a href="#facebook" title="Facebook"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href="#instagram" title="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="#twitter" title="Twitter"><i class="fab fa-twitter-square fa-2x"></i></a>
+        <a href="#facebook" title="Facebook"><i class="fab fa-facebook-square fa-2x linkoff"></i></a>
+        <a href="#instagram" title="Instagram"><i class="fab fa-instagram fa-2x linkoff"></i></a>
+        <a href="#twitter" title="Twitter"><i class="fab fa-twitter-square fa-2x linkoff"></i></a>
 
     </footer>
 
