--- a/src/views/chapters.twig
+++ b/src/views/chapters.twig
@@ -8,12 +8,12 @@
 
     {% for chapter in chapters %}
 
-        <section class="card">
+        <section class="card bg-light">
             <h2 class="card-header">{{ chapter.title | nl2br }}</h2>
             <div class="card-body">
                 <h3 class="card-text">{{ chapter.creation_date_fr }}</h3>
                 <p class="card-text">{{ chapter.content | slice(0, 250) | nl2br }}</p>
-                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link">Lire plus...</a>
+                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link linkoff">Lire plus...</a>
             </div>
         </section>
 
