--- a/src/views/contact.twig
+++ b/src/views/contact.twig
@@ -6,7 +6,7 @@
 
     <h1>Contactez moi !</h1>
 
-    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=sendmail">
+    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?access=sendmail">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
