--- a/src/views/home.twig
+++ b/src/views/home.twig
@@ -27,7 +27,7 @@
         <div class="card-body">
             <h3 class="card-text">{{ chapter.creation_date_fr }}</h3>
             <p class="card-text">{{ chapter.content | slice(0, 250) | nl2br }}</p>
-            <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapter&id={{ chapter.id }}" class="card-link linkoff">Lire plus...</a>
+            <a href="https://jeanforteroche.valentin-antoin.fr/index.php?access=chapter&id={{ chapter.id }}" class="card-link linkoff">Lire plus...</a>
         </div>
     </section>
 
