--- a/src/views/layout.twig
+++ b/src/views/layout.twig
@@ -70,14 +70,14 @@
                         <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=chapters">Chapitres <span class="sr-only"></span></a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=chapters">Chapitres <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=presentation">Présentation</a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=presentation">Présentation</a>
                     </li>
                     {% if session.admin is not defined %}
                         <li class="nav-item">
-                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=contact">Contact</a>
+                        <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=contact">Contact</a>
                     </li>
                     {% endif %}
                     {% if session.pseudo is not defined %}
@@ -86,8 +86,8 @@
                             Connectez-vous
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=subscribe">Inscription</a>
-                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=connection">Connexion</a>
+                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=subscribe">Inscription</a>
+                            <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=connection">Connexion</a>
                         </div>
                     </li>
                     {% endif %}
@@ -96,17 +96,17 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin">Tableau de bord</a>
-                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#newchap">Nouveau chapitre</a>
-                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#savechap">Chapitres en attente </a>
-                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=admin#comments">modération</a>
+                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=admin">Tableau de bord</a>
+                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=admin#newchap">Nouveau chapitre</a>
+                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=admin#savechap">Chapitres en attente </a>
+                                <a class="dropdown-item" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=admin#comments">modération</a>
                             </div>
                         </li>
                     {% endif %}
 
                     {% if session.pseudo is defined %}
                     <li class="nav-item">
-                    <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=disconnect">Se déconnecter</a>
+                    <a class="nav-link" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=disconnect">Se déconnecter</a>
                     </li>
                 <li class="navbar-item">
                     <a class="nav-link disabled" href="#">Bonjour {{ session.pseudo }}</a>
