--- a/src/views/presentation.twig
+++ b/src/views/presentation.twig
@@ -12,7 +12,7 @@
 
     <div class="btncontainer">
 
-        <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=modchap&id={{ presentation.id }}">
+        <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=modchap&id={{ presentation.id }}">
             <button type="button" class="btn btnChap btn-warning">Modifier la présentation</button>
         </a>
 
