--- a/src/views/subscribe.twig
+++ b/src/views/subscribe.twig
@@ -6,7 +6,7 @@
 
     <h1>Inscivez vous !</h1>
 
-    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=postsubscribe">
+    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?access=postsubscribe">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
