--- a/src/views/chapter.twig
+++ b/src/views/chapter.twig
@@ -17,10 +17,10 @@
 
             <div class="btncontainer">
 
-                  <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=modchap&id={{ chapter.id }}">
+                  <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=modchap&id={{ chapter.id }}">
                     <button type="button" class="btn btnChap btn-warning">Modifier ce chapitre</button>
                   </a>
-                  <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=delchap&id={{ chapter.id }}">
+                  <a class="controls" href="https://jeanforteroche.valentin-antoin.fr/index.php?access=delchap&id={{ chapter.id }}">
                     <button type="button" class="btn btnChap btn-danger">Supprimer ce chapitre</button>
                   </a>
             </div>
@@ -48,7 +48,7 @@
 
                 {% if session.pseudo is defined %}
 
-                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?acces=reportcom&id={{ chapter.id }}&com={{ comment.id }}" class="linkoff">Signaler ce commentaire.</a>
+                <a href="https://jeanforteroche.valentin-antoin.fr/index.php?access=reportcom&id={{ chapter.id }}&com={{ comment.id }}" class="linkoff">Signaler ce commentaire.</a>
 
                 {% endif %}
 
@@ -61,7 +61,7 @@
 <!--   ADD COMMENT   -->
     {% if session.pseudo is defined %}
 
-    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?acces=postcom&id={{ chapter.id }}">
+    <form method="post" action="https://jeanforteroche.valentin-antoin.fr/index.php?access=postcom&id={{ chapter.id }}">
 
         <div class="input-group flex-nowrap">
             <div class="input-group-prepend">
